@@ -1,0 +1,26 @@
+/*
+   test C2X memalignment.
+   type: char, int, long, long long
+ */
+
+#include <testfwk.h>
+
+#ifdef __SDCC
+#pragma std_c2x
+
+#include <stdlib.h>
+
+size_t memalignment(const void *p); // TODO: Rely on stdlib.h instead once the preprocessor can handle the option for C2X.
+{type} c;
+#endif
+
+void
+testMemalign(void)
+{
+#ifdef __SDCC
+	ASSERT(memalignment(0) == 0);
+	ASSERT(memalignment(&c) > 0);
+	ASSERT(memalignment(&c) >= _Alignof({type}));
+#endif
+}
+
